...
  Created by Tom Hartnett on 9/12/20.
  
*/

"About the App" = "About the App";
"about-version-format-string" = "Version %@ (%@)";
"About" = "About";
"Actions" = "Actions";
"Add new item..." = "Add new item...";
"Add new list..." = "Add new list...";
"Cancel" = "Cancel";
"Created by" = "Created by";
"Delete" = "Delete";
"Delete all" = "Delete all";
"Delete all items" = "Delete all items";
"Delete all items?" = "Delete all items?";
"Delete completed items" = "Delete completed items";
"Delete completed items?" = "Delete completed items?";
...
"Long-press on a list for options" = "Long-press on a list for options";
"Mark all complete" = "Mark all complete";
"Mark all incomplete" = "Mark all incomplete";
"Mark complete" = "Mark complete";
"Mark incomplete" = "Mark incomplete";
"Mark" = "Mark";
"More" = "More";
"Move" = "Move";
"No deleted lists" = "No deleted lists";
"No Lists" = "No Lists";
"No Selection" = "No Selection";
"Not authorized to make purchases." = "Not authorized to make purchases.";
"Optional In-App Purchases" = "Optional In-App Purchases";
"Permanently delete all?" = "Permanently delete all?";
"Please Rate this App" = "Please Rate this App";
"Premium features" = "Premium features";
"Premium Mode" = "Premium Mode";
"Privacy Policy" = "Privacy Policy";
"privacy-changes-body-text" = "We reserve the right to change this policy at any time. Please check this page periodically for changes.";
"privacy-changes-header-text" = "Changes to This Policy";
"privacy-commitment-body-text" = "Your privacy is important to us. To protect that privacy, we provide this notice to explain our information collection practices.";
"privacy-commitment-header-text" = "Our Commitment to Privacy";
"privacy-contact-us-body-text" = "Should you have questions or concerns about this privacy policy, please email snaplists@sleekible.com. At this time, we only have the ability to receive and send English-language communications.";
"privacy-contact-us-header-text" = "How to Contact Us";
"privacy-data-body-text" = "The Snaplists app does not collect any user information. There is no sign-up, sign-in, or opportunity in the app to give us your personal information.  The app uses Apple’s iCloud service to sync your lists across your devices.  We cannot see your data:  your lists, the list title, the items on the list, even the number of lists you create in the app.  We cannot view an
"privacy-data-header-text" = "Your Data is Private";
"privacy-effective-date-text" = "Effective Date: February 7, 2021";
"privacy-external-services-body-text" = "The Snapslists app does not use any 3rd party/external services.  There are no analytics gathering, behavior tracking, etc.  This app uses only Apple-provided APIs and frameworks.";
"privacy-external-services-header-text" = "No External Services";
"privacy-feedback-body-text" = "The app does provide a feedback feature to allow you to provide us feedback about the app. This feature opens a simple email to us. Be aware that by sending the email, you are giving us your email address. We do not use this email address for anything other than responding to your feedback, via email.";
"privacy-feedback-header-text" = "In-App Feedback";
"Purchase is pending approval." = "Purchase is pending approval.";
"Purchased" = "Purchased";
"Rename List" = "Rename List";
"Rename" = "Rename";
"Restore Purchase" = "Restore Purchase";
"Restore" = "Restore";
"Send Feedback via Email" = "Send Feedback via Email";
"Snaplists Premium" = "Snaplists Premium";
"Snaplists" = "Snaplists";
"Sorry!" = "Sorry!";
"store-header-text" = "Premium mode is an optional in-app purchase that unlocks additional app features.";
"store-limits-number-of-items" = "You've reached the maximum number of items in the free version of the app.";
"store-limits-number-of-lists" = "You've reached the maximum number of lists in the free version of the app.";
"store-purchase-button-format-string" = "Purchase %@";
"store-support-the-app-text" = "Your purchase supports development of the app 💙";
...
