...
                        NavigationLink(value: HomeNavigation.more) {
                            Image(systemName: "ellipsis.circle")
                                .frame(width: 25, height: 25)
                                .foregroundColor(Color("TextSecondary"))
                            Text("More")
                        }
                        .accessibilityIdentifier("MoreNavigationLink")
                    }
                }
            }
            .navigationBarTitle("Snaplists")
            .navigationBarTitleDisplayMode(.inline)
            .navigationBarItems(
...
